--- a/quickstart-java/app/src/main/AndroidManifest.xml
+++ b/quickstart-java/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.hypertrack.quickstart.android.github">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_green"
