--- a/quickstart-java/app/build.gradle
+++ b/quickstart-java/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.hypertrack:hypertrack-views:0.8.10'
 
 }
